[package]
name = "hello_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { version = "0.11.0", features = ["cuda", "nightly", "numpy"] } # TODO: add "cuda" feature when downloaded
indicatif = "0.17.3"
mnist = {version = "0.5.0", features = ["download"]}
rand = "0.8.5"
